omnitron-rpc/tests/compile_fail/tarpc_service_derive_serde.rs
#[omnitron_rpc::service(derive_serde = loop {})]
trait World {
    async fn hello();
}

fn main() {}
