omnitron-rpc/tests/compile_fail/tarpc_service_derive_serde.stderr
error: expected literal
 --> tests/compile_fail/omnitron_rpc_service_derive_serde.rs:1:33
  |
1 | #[omnitron_rpc::service(derive_serde = loop {})]
  |                                        ^^^^
